# Agentclinic-Tree-Dx-Spec

./: agentclinic_patch_development_documentation.md  agentclinic_tree_dx_spec.md  agentclinic_upstream_setup.md  pyproject.toml  readme.md  sdbench_diagnostic_algorithm_patch_dev_doc.md  sdbench_tree_dx_scaffold_continuation.md  sdbench_tree_dx_spec.md  sdbench_upstream_setup.md  static_diagnosis_qa_mode_spec.md  static_diagnosis_qa_mode_spec_part_2.md  static_diagnosis_qa_mode_spec_part_3.md  static_diagnosis_qa_mode_spec_part_4.md  static_diagnosis_qa_mode_spec_part_5.md  static_diagnosis_qa_patch_spec.md
src/agentclinic_tree_dx/: __init__.py  aggregator.py  branch_manager.py  config.py  controller.py  evidence_annotator.py  executor.py  leaf_planner.py  llm_client.py  prompting.py  root_selector.py  safety.py  state.py  state_reviser.py  termination.py  update_router.py  updater.py
src/agentclinic_tree_dx/adapters/: agentclinic_env.py  mock_env.py  sdbench_env.py  static_qa_env.py
src/agentclinic_tree_dx/prompts/: answer_mapper.txt  branch_creator.txt  challenger.txt  checklist.txt  consensus.txt  evidence_allocator.txt  evidence_annotator.txt  final_aggregator.txt  final_diagnosis_emitter.txt  hypothesis.txt  post_update_state_reviser.txt  reasoning_economy_auditor.txt  root_selector.txt  safety_controller.txt  stewardship.txt  temporary_analytic_leaf_planner.txt  temporary_leaf_planner.txt  (+4 more)
tests/: test_agentclinic_env.py  test_controller.py  test_llm_path.py  test_patch_mode.py  test_sdbench_mode.py  test_state.py  test_static_qa_mode.py  test_update_router.py
(+2 files in other folders)
