[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentclinic-tree-dx"
version = "0.1.0"
description = "Prototype tree-based diagnostic agent for AgentClinic-style tasks"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = ["openai>=1.40.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
